fix: Refresh not visible in dark mode
Pull down refresh wasn't worked out for dark mode. Hence, on pulling down to refresh users weren't able to see "refreshing", and cannot even know about this feature (refresh on pull down) when dark mode was enabled.

--- a/src/pages/wallet/wallet-dashboard/wallet-dashboard.scss
+++ b/src/pages/wallet/wallet-dashboard/wallet-dashboard.scss
@@ -94,5 +94,10 @@ page-wallet-dashboard {
     .tx {
       border-bottom: 1px solid color($darkColors, secondary-background, base);
     }
+    
+    ion-refresher * {
+      color: #fff;
+      stroke: #fff;
+    }
   }
 }
